--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -40,9 +39,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
+    "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
