--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.19",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
     "i18next": "^23.2.5",
     "i18next-browser-languagedetector": "^7.1.0",
+    "jss": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
-    "react-redux": "^8.1.1",
+    "react-jss": "^10.10.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -40,7 +42,6 @@
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
-    "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
