--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,20 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:import/recommended"
   ],
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./src"
+      }
+    }
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
   "plugins": ["react-refresh"],
@@ -19,6 +31,32 @@
           {
             "group": [".*"],
             "message": "Relative imports prohibited. Use absolute path."
+          }
+        ]
+      }
+    ],
+    "import/no-restricted-paths": [
+      "error",
+      {
+        "zones": [
+          {
+            "target": "./src/application",
+            "from": ["./src/presentation"],
+            "message": "Application layer cannot depend on Presentation layer"
+          },
+          {
+            "target": "./src/entities",
+            "from": [
+              "./src/application",
+              "./src/infrastructure",
+              "./src/presentation"
+            ],
+            "message": "Entity layer cannot depend on other layers"
+          },
+          {
+            "target": "./src/infrastructure",
+            "from": ["./src/application", "./src/presentation"],
+            "message": "Infrastructure layer cannot depend on Application or Presentation layers"
           }
         ]
       }
