--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.19",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "formik": "^2.4.2",
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-jss": "^10.10.0",
+    "react-redux": "^8.1.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -36,6 +37,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
