--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,41 @@
           }
         ]
       }
+    ],
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": true,
+        "ignoreDeclarationSort": true
+      }
+    ],
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "type", "internal"],
+        "pathGroups": [
+          {
+            "pattern": "entities/**",
+            "group": "internal",
+            "position": "before"
+          },
+          {
+            "pattern": "infrastructure/**",
+            "group": "internal",
+            "position": "before"
+          },
+          {
+            "pattern": "application/**",
+            "group": "internal",
+            "position": "before"
+          },
+          {
+            "pattern": "presentation/**",
+            "group": "internal",
+            "position": "before"
+          }
+        ]
+      }
     ]
   },
   "ignorePatterns": ["dist/", "server/"]
