--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
   "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
   "plugins": ["react-refresh"],
   "rules": {
+    "import/no-cycle": "error",
     "prettier/prettier": "error",
     "react-refresh/only-export-components": "warn",
     "no-restricted-imports": [
@@ -56,42 +57,12 @@
           {
             "target": "./src/infrastructure",
             "from": ["./src/application", "./src/presentation"],
-            "message": "Infrastructure layer cannot depend on Application or Presentation layers"
-          }
-        ]
-      }
-    ],
-    "sort-imports": [
-      "error",
-      {
-        "ignoreCase": true,
-        "ignoreDeclarationSort": true
-      }
-    ],
-    "import/order": [
-      "error",
-      {
-        "groups": ["builtin", "external", "type", "internal"],
-        "pathGroups": [
-          {
-            "pattern": "entities/**",
-            "group": "internal",
-            "position": "before"
+            "message": "Infrastructure layer should depend only on Entity layer"
           },
           {
-            "pattern": "infrastructure/**",
-            "group": "internal",
-            "position": "before"
-          },
-          {
-            "pattern": "application/**",
-            "group": "internal",
-            "position": "before"
-          },
-          {
-            "pattern": "presentation/**",
-            "group": "internal",
-            "position": "before"
+            "target": "./src/presentation",
+            "from": ["./src/entity", "./src/infrastructure"],
+            "message": "Presentation layer should depend only on Application layer"
           }
         ]
       }
