--- a/package.json
+++ b/package.json
@@ -12,26 +12,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "clsx": "^1.2.1",
-    "formik": "^2.4.2",
     "i18next": "^23.2.5",
     "i18next-browser-languagedetector": "^7.1.0",
-    "jss": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
-    "react-jss": "^10.10.0",
-    "react-redux": "^8.1.1",
-    "zod": "^3.21.4"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "@types/testing-library__jest-dom": "^5.14.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
@@ -43,10 +34,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
-    "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "vite": "^4.3.9"
   }
 }
