--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "axios": "^1.4.0",
     "i18next": "^23.2.5",
     "i18next-browser-languagedetector": "^7.1.0",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.1",
-    "yup": "^1.2.0"
+    "react-i18next": "^13.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
